@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.21"
+  VERSION = "1.0.22"
 end
